# rtmp2rtsp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  consul.c  consul.h  http.c  http.h  main.c  prometheus.c  prometheus.h  rtmp2rtsp.c  rtsp.c  rtsp.h
test/: nginx.conf  stream.sdp  test-audio  test-player  test-stream  test-video
